# time-series-mongodb-pymongo

./: README.md  collection_create.py  docker-compose.yaml  main.py  pyproject.toml
app/: README.md  __init__.py  main.py  requirements.txt
app/server/: api_app.py
app/server/models/: database.py  models.py  schemas.py
app/server/routes/: device.py
app/server/utils/: pydantic_encoder.py
script_github_download/: download_github_repos.py
src/: 01-pymongo-pandas.ipynb  chart.py  collection_create.py  db_client.py  generate_data.py  playground-1.mongodb.js  requirements.txt
