[project]
name = "ts-pymongo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie>=2.0.0",
    "fastapi>=0.116.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "motor>=3.7.1",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "pymongo>=4.13.2",
    "python-decouple>=3.8",
    "uvicorn[standard]>=0.35.0",
]
